# blockchain

blockchain_network/: Cargo.toml  config.json
blockchain_network/src/: blockchain.rs  config.rs  main.rs  traits.rs
dataBackupAndRecovery/: Cargo.toml  blockchain_backup.txt
dataBackupAndRecovery/src/: main.rs
data_backup_and_recovery/: Cargo.toml  blockchain_backup.txt
data_backup_and_recovery/src/: main.rs
forksAndConsensus/: Cargo.toml
forksAndConsensus/src/: main.rs
forks_and_consensus/: Cargo.toml
forks_and_consensus/src/: main.rs
local_blockchain_emulation/: Cargo.toml
local_blockchain_emulation/src/: main.rs
logicIntoModules/: Cargo.toml
logicIntoModules/src/: block.rs  blockchain.rs  main.rs  transaction.rs
node_as_service/: Cargo.toml
node_as_service/src/: main.rs
proofOfWork/: Cargo.toml
proofOfWork/src/: main.rs
proof_of_work/: Cargo.toml
proof_of_work/src/: main.rs
splitting_logic_into_modules/: Cargo.toml
splitting_logic_into_modules/src/: block.rs  blockchain.rs  header.rs  main.rs  transaction.rs
traits/: Cargo.toml
traits/src/: main.rs
