[package]
name = "blockchain_network"
version = "2.0.0"
authors = [""]
edition = "2021"

[dependencies]
actix = "0.10"
actix-codec = "0.3"
actix-web = "3"
actix-web-actors = "3"
actix-files = "0.3"
awc = "2"
env_logger = "0.8"
futures = "0.3.1"
serde_json = "1.0.74"
time = "0.3.5"
actix-rt = "1.0.0"

serde = { version = "1.0.133", features = ["derive"] }
sha2 = "0.9.8"
rand = "0.5.4"
chrono = "0.4"
fastrand = "1.3.4"