[package]
name = "forksAndConsensus"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sha2 = "0.9.8"
num-bigint = { version = "0.2.0", features = ["rand"] }
rand = "0.5.4"
num-traits = "0.2.14"
chrono = "0.4"