[package]
name = "node_as_service_actix"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.5"
actix-web = "3.3.3"
actix-rt = "2.5.1"
serde = { version = "1.0.133", features = ["derive"] }
sha2 = "0.9.8"
rand = "0.5.4"
chrono = "0.4"
fastrand = "1.3.4"